# OMTP_Exercises

./: .colcon_ignore  .gitignore  README.md  build.sh  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
omtp_lecture10/: requirements.txt
ros1_resources/external_packages/aau_lab_ros_models/: CMakeLists.txt  package.xml
ros1_resources/external_packages/aau_lab_ros_models/urdf/festo_bypass_module/: festo_bypass_module.urdf.xacro
ros1_resources/external_packages/aau_lab_ros_models/urdf/festo_robot_module/: festo_robot_module.urdf.xacro
ros1_resources/external_packages/aau_lab_ros_models/urdf/festo_straight_module/: festo_straight_module.urdf.xacro
ros1_resources/external_packages/aau_lab_ros_models/urdf/festo_t_module/: festo_t_module.urdf.xacro
ros1_resources/external_packages/aau_lab_ros_models/urdf/pool_cue/: pool_cue.urdf.xacro
ros1_resources/external_packages/external_ros_models/: CMakeLists.txt
ros1_resources/external_packages/franka_description/robots/: panda.gazebo.xacro
ros1_resources/external_packages/gazebo_tests/: CMakeLists.txt  README.md
ros1_resources/external_packages/gazebo_tests/cfg/: ModelSpawn.cfg
ros1_resources/external_packages/gazebo_tests/scripts/: spawn_by_params.py
ros1_resources/omtp_lecture1/: CMakeLists.txt  package.xml
ros1_resources/omtp_lecture1/rviz/: omtp.rviz
ros1_resources/omtp_lecture2/omtp_lecture2/: CMakeLists.txt  package.xml
ros1_resources/omtp_lecture2_2/: CMakeLists.txt  package.xml
ros1_resources/omtp_lecture2_2/scripts/: move_robot.py  spawn_box.py
src/external_packages/aau_lab_ros_models/: package.xml  setup.cfg  setup.py
src/external_packages/aau_lab_ros_models/urdf/fib14/: fib14.urdf.xacro
src/external_packages/aau_lab_ros_models/urdf/wood_box/: wood_box.urdf.xacro
src/external_packages/ariac_sensors/src/: ariac_camera_plugin.cpp  ariac_logical_camera_plugin.cpp
src/external_packages/external_ros_models/: package.xml  setup.py
src/external_packages/franka_description/: package.xml  setup.cfg  setup.py
src/external_packages/franka_description/robots/: hand.xacro
src/external_packages/gazebo_tests/: package.xml
src/external_packages/gazebo_tests/launch/: empty_gazebo.launch
src/external_packages/gazebo_tests/scripts/: loop_parameter_example.py  test_spawn.py
src/external_ros_models/: package.xml  setup.cfg  setup.py
src/flexbe_repo_behaviors/: README.md
src/flexbe_repo_behaviors/PROJECT_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/flexbe_repo_behaviors/flexbe_repo_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/flexbe_repo_behaviors/flexbe_repo_flexbe_behaviors/manifest/: example_action_state_behavior.xml  example_behavior.xml
src/flexbe_repo_behaviors/flexbe_repo_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/flexbe_repo_behaviors/flexbe_repo_flexbe_states/tests/: example_action_state.test  example_state.test  run_colcon_test.py  run_tests.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/aau_lab_ros_models/share/aau_lab_ros_models/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/external_ros_models/share/external_ros_models/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/omtp_lecture1_2/share/omtp_lecture1_2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/omtp_lecture1_2/share/omtp_lecture1_2/launch/: visualize_omtp_factory_launch.xml
src/lecture2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/lecture2_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  omtp_factory.ros2_control.xacro  omtp_factory.srdf  omtp_factory.urdf.xacro  ros2_controllers.yaml
src/lecture2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/lecture2_single_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/lecture2_single_panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  omtp_factory.ros2_control.xacro  omtp_factory.srdf  omtp_factory.urdf.xacro  ros2_controllers.yaml
src/lecture2_single_panda_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/log/: latest_build
src/omtp_lecture1_2/: package.xml  setup.cfg  setup.py
src/omtp_lecture1_2/launch/: rsp.launch.py  visualize_omtp_factory.launch.py  vizualize_omtp_factory.launch.py
src/omtp_lecture1_2/rviz/: omtp.rviz
src/omtp_lecture1_2/urdf/: omtp.urdf  omtp_factory.xacro
src/omtp_lecture2_2/: CMakeLists.txt  package.xml
src/omtp_lecture2_2/descriptions/: box.sdf
src/omtp_lecture2_2/launch/: gazebo.launch.py  move.launch.py  move_panda.launch.py  pick_and_place.launch.py  spawn_box.launch.py
src/omtp_lecture2_2/src/: move_demo.cpp  move_panda.cpp
src/omtp_lecture3_2/: CMakeLists.txt  package.xml
src/omtp_lecture3_2/launch/: logic_pick_and_place.launch.py  spawn_logic_camera.launch.py
src/omtp_lecture3_2/src/: logic_pick_and_place.cpp
src/omtp_lecture4_2/omtp_factory_behaviors/: README.md
src/omtp_lecture4_2/omtp_factory_behaviors/PROJECT_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/omtp_lecture4_2/omtp_factory_behaviors/omtp_factory_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/omtp_lecture4_2/omtp_factory_behaviors/omtp_factory_flexbe_behaviors/manifest/: example_action_state_behavior.xml  example_behavior.xml
src/omtp_lecture4_2/omtp_factory_behaviors/omtp_factory_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
tmp/: demo.launch.py  omtp_factory.urdf.xacro
(+4 files in other folders)
