<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture1</name>
  <version>0.0.0</version>
  <description>The omtp_lecture1 package</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>franka_description</depend>
  <depend>xacro</depend>
  <depend>moveit_ros_control_interface</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
