<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omtp_lecture2_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="victor.risager@hotmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="/workspaces/OMTP_Exercises/install/aau_lab_ros_models/share"/>
    <gazebo_ros gazebo_model_path="/workspaces/OMTP_Exercises/install/external_ros_models/share"/>
    <gazebo_ros gazebo_model_path="/workspaces/OMTP_Exercises/install/franka_description/share"/>
  </export>
</package>
