<?xml version="1.0"?>
<package format="2">
  <name>aau_lab_ros_models</name>
  <version>0.0.0</version>
  <description>The aau_lab_ros_models package</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
