<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
        <name>omtp_lecture1_2</name>
        <version>0.0.0</version>
        <description>TODO: Package description</description>
        <maintainer email="victor.risager@hotmail.com">ros</maintainer>
        <license>TODO: License declaration</license>

        <test_depend>ament_copyright</test_depend>
        <test_depend>ament_flake8</test_depend>
        <test_depend>ament_pep257</test_depend>
        <test_depend>python3-pytest</test_depend>


        <!-- Resources -->
        <depend>joint_state_publisher</depend>
        <depend>robot_state_publisher</depend>
        <depend>rviz</depend>
        <depend>franka_description</depend>
        <depend>xacro</depend>
        <depend>moveit_ros_control_interface</depend>


        <export>
                <build_type>ament_python</build_type>
        </export>
</package>
